update @Contended for JDK8+
Signed-off-by: Sven Augustus <svenaugustus@outlook.com>